# wasm-game-of-life

./: Cargo.toml
src/: lib.rs
src/game/: cell.rs  mod.rs  world.rs
www/: index.html  index.js  package-lock.json  package.json  styles.css
