[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["veeso <christian.visintin1997@gmail.com>"]
edition = "2018"
description = "Game of life implemented in Wasm"
repository = "https://github.com/veeso/wasm-game-of-life"
license = "The Unlicense"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [ ]
development = [ "console_error_panic_hook" ]

[dependencies]
wasm-bindgen = "0.2.63"
# Only for development
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
pretty_assertions = "^1.2.0"
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
